fixed submenu being behind footer

--- a/src/scss/GeneralLayout/_footer.scss
+++ b/src/scss/GeneralLayout/_footer.scss
@@ -10,7 +10,7 @@
 	font-family: "Montserrat";
 	text-align: center;
 	line-height: 30px;
-	z-index: 6;
+	z-index: 5;
 
 	a {
 		margin: 0 10px;
